--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "assessment-platform",
+  "name": "assessly-platform",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -15,17 +15,19 @@
     "prepare": "husky install",
     "deploy": "npm run build && firebase deploy --only hosting",
     "deploy:prod": "npm run build && firebase deploy --only hosting -P production",
-    "deploy:functions": "npm --prefix functions run deploy",
+    "deploy:functions": "npm --prefix functions run build && firebase deploy --only functions",
     "deploy:rules": "firebase deploy --only firestore:rules,storage",
-    "deploy:all": "npm run deploy && npm run deploy:functions && npm run deploy:rules",
+    "deploy:all": "npm run build && npm run deploy:functions && npm run deploy:rules && npm run deploy",
     "emulate": "firebase emulators:start --import=./emulator-data --export-on-exit",
     "cypress:open": "cypress open",
-    "cypress:run": "cypress run"
+    "cypress:run": "cypress run",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@mui/material": "^5.14.2",
     "@mui/icons-material": "^5.14.2",
     "@mui/x-data-grid": "^6.15.0",
+    "@mui/x-date-pickers": "^6.15.0",
     "firebase": "^10.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -34,12 +36,20 @@
     "date-fns": "^2.30.0",
     "notistack": "^3.0.0",
     "jspdf": "^2.5.1",
-    "jspdf-autotable": "^3.5.28"
+    "jspdf-autotable": "^3.5.28",
+    "react-firebase-hooks": "^5.1.1",
+    "framer-motion": "^10.12.16",
+    "react-helmet-async": "^1.3.0",
+    "react-error-boundary": "^4.0.11",
+    "lodash.debounce": "^4.0.8",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/node": "^20.4.5",
+    "@types/uuid": "^9.0.2",
+    "@types/lodash.debounce": "^4.0.7",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.14",
     "cypress": "^12.17.3",
@@ -50,6 +60,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-security": "^1.7.1",
+    "eslint-plugin-testing-library": "^6.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
     "postcss": "^8.4.27",
@@ -58,7 +69,11 @@
     "typescript": "^5.1.6",
     "vite": "^4.4.5",
     "vite-plugin-pwa": "^0.16.4",
-    "vitest": "^0.33.0"
+    "vite-plugin-svgr": "^3.1.0",
+    "vitest": "^0.33.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/jest-dom": "^6.1.2",
+    "@testing-library/user-event": "^14.4.3"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
@@ -73,7 +88,9 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all"
+      "not op_mini all",
+      "not ie > 0",
+      "not safari < 13"
     ],
     "development": [
       "last 1 chrome version",
