--- a/functions/firebase.json
+++ b/functions/firebase.json
@@ -1,40 +1,21 @@
 {
-  "hosting": {
-    "public": "public",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ]
-  },
   "functions": {
     "source": "functions",
-    "runtime": "nodejs16",
-    "predeploy": [
-      "npm --prefix \"$RESOURCE_DIR\" run lint"
-    ]
+    "runtime": "nodejs16"
   },
-  "firestore": {
-    "database": "(default)",
-    "location": "eur3",
-    "rules": "firestore.rules",
-    "indexes": "firestore.indexes.json"
+  "hosting": {
+    "public": "public",
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
   },
   "emulators": {
-    "auth": {
-      "port": 9099
-    },
     "functions": {
-      "port": 5001
+      "port": 5002
     },
-    "firestore": {
-      "port": 8080
-    },
-    "ui": {
-      "enabled": true
+    "hosting": {
+      "port": 5000
     }
-  },
-  "storage": {
+  }
+}  "storage": {
     "rules": "storage.rules"
   }
 }
